# Telegram-Archive

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  shellcheck.yml  tests.yml
docs/: CHANGELOG.md
src/: __init__.py  __main__.py  cleanup_media.py  config.py  connection.py  message_utils.py  migrate_shared_media.py  parallel_download.py  repair_media_extensions.py  scheduler.py  setup_auth.py  telegram_backup.py
src/db/: adapter.py
src/web/: main.py  thumbnails.py
src/web/templates/: index.html
tests/: test_cleanup_media.py  test_config.py  test_connection.py  test_db_adapter.py  test_flood_wait_visibility.py  test_parallel_download.py  test_repair_media_extensions.py  test_scheduler.py  test_shared_media_sharding.py  test_symlink_dedup.py  test_telegram_backup.py  test_telegram_backup_extended.py
